--- a/app/src/main/res/layout/fragment_view_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_schedule.xml
@@ -130,6 +130,7 @@
                     android:layout_gravity="center_vertical"
             >
                 <ImageButton
+                        android:id="@+id/delete_btn"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:scaleType="fitCenter"
