--- a/app/src/main/res/layout/fragment_view_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_schedule.xml
@@ -3,52 +3,43 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View"/>
 
+        <variable
+                name="dto"
+                type="com.softhouse.workingout.ui.schedules.dto.ScheduleDTO"/>
     </data>
 
     <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
             app:cardCornerRadius="15dp"
+            app:cardElevation="6dp"
             app:cardUseCompatPadding="true"
+            android:layout_height="wrap_content"
     >
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="5"
+                android:layout_width="357dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:orientation="horizontal"
-                android:background="@color/lightBlueSecondary"
-        >
+                android:padding="5dp">
+            <ImageView
+                    android:id="@+id/alarm_logo"
+                    android:layout_width="70dp"
+                    android:layout_height="100dp"
+                    android:contentDescription="Alarm Logo"
+                    app:srcCompat="@drawable/outline_alarm_black_24dp"
+                    android:src="@drawable/outline_alarm_black_24dp"/>
             <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
-            >
-                <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center_vertical"
-                        app:srcCompat="@drawable/outline_alarm_black_24dp"
-                >
-                </ImageView>
-            </LinearLayout>
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-            >
                 <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:layout_marginTop="30dp"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal"
                 >
                     <TextView
@@ -56,7 +47,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:text="16.46"
+                            android:text='@{dto.startTime}'
                             android:textSize="24sp"
                     />
                     <TextView
@@ -71,77 +62,47 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:text="16.46"
+                            android:text='@{dto.endTime}'
                             android:textSize="24sp"
                     />
 
                 </LinearLayout>
 
-                <LinearLayout
+                <TextView
+                        android:id="@+id/desc_text"
+                        android:text='@{dto.desc}'
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.9"
-                >
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:textSize="14sp"
-                            android:text="M T W T F S S"
-                    >
-                    </TextView>
-                </LinearLayout>
+                        android:layout_height="wrap_content"/>
 
-                <LinearLayout
+                <TextView
+                        android:id="@+id/detail_text"
+                        android:text='@{dto.detail}'
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.9"
-                >
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:textSize="14sp"
-                            android:text="Repeat"
-                    >
-                    </TextView>
-                </LinearLayout>
+                        android:layout_height="wrap_content"/>
 
-                <LinearLayout
+                <TextView
+                        android:id="@+id/autoStart_text"
+                        android:text="Auto"
+                        android:visibility='@{dto.autoStart ? View.VISIBLE : View.GONE}'
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.9"
-                >
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:textSize="14sp"
-                            android:text="text3"
-                    >
-                    </TextView>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-            >
-                <ImageButton
-                        android:id="@+id/delete_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:scaleType="fitCenter"
-                        android:layout_gravity="center_vertical"
-                        app:srcCompat="@drawable/outline_delete_black_24dp"
-                        style="?android:attr/borderlessButtonStyle"
-                >
-                </ImageButton>
+                        android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
         </LinearLayout>
+
+        <ImageButton
+                android:id="@+id/deleteBtn"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="end|center"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/outline_delete_black_24dp"
+                android:src="@drawable/outline_delete_black_24dp"
+                style="?android:attr/borderlessButtonStyle"
+        >
+        </ImageButton>
+
+
     </com.google.android.material.card.MaterialCardView>
 </layout>
