--- a/app/src/main/res/layout/fragment_view_schedule_list.xml
+++ b/app/src/main/res/layout/fragment_view_schedule_list.xml
@@ -11,8 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
             android:name="com.softhouse.workingout.ui.schedules.ViewScheduleFragment"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_width="355dp"
+            android:layout_height="697dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             app:layoutManager="LinearLayoutManager"
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.147"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floating_action_button"
             android:layout_width="wrap_content"
